--- a/src/components/AboutInnerNav.css
+++ b/src/components/AboutInnerNav.css
@@ -80,7 +80,7 @@
   height: 82px;
 }
 
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .about-nav-container {
     margin-top: 100px;
     padding: 0px 20px;
@@ -103,7 +103,7 @@
     margin-top: 50px;
   }
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .about-nav-container {
     margin-top: 80px;
     padding: 0px 10px;
@@ -126,7 +126,7 @@
     gap: 30px;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .about-nav-container {
     margin-top: 50px;
     padding-left: 12px;
@@ -148,7 +148,7 @@
     margin-top: 60px;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .about-nav-container {
     margin-top: 10px;
     padding-left: 12px;
