--- a/src/components/AirSystems.css
+++ b/src/components/AirSystems.css
@@ -34,7 +34,7 @@
   right: 200px;
   top: 50px;
 }
-@media only screen and (min-width: 1024px) {
+@media (min-width: 1024px) {
   .air-systems-list {
     width: 87%;
     top: 170px;
@@ -50,7 +50,7 @@
     top: 50px;
   }
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .air-systems-list {
     width: 87%;
     top: 170px;
@@ -66,7 +66,7 @@
     top: 50px;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .air-systems-container {
     margin-top: 0px;
   }
@@ -85,7 +85,7 @@
     top: 50px;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .air-systems-list {
     width: 91%;
     top: 170px;
