--- a/src/components/BrandLogoCard.css
+++ b/src/components/BrandLogoCard.css
@@ -9,7 +9,7 @@
     justify-content: center;
     padding: 70px 60px;
 }
-@media only screen and (max-width:600px) {
+@media (max-width:600px) {
     .logo-card{
         width: 186px;
         height: 100px;
