--- a/src/components/CarouselButton.css
+++ b/src/components/CarouselButton.css
@@ -4,7 +4,19 @@
   justify-content: center;
   gap: 15px;
 }
-@media only screen and (max-width: 600px) {
+.prev{
+  transform: scale(0.9);
+}
+.prev:hover{
+  transform: scale(1);
+}
+.next{
+  transform: scale(0.9);
+}
+.next:hover{
+  transform: scale(1);
+}
+@media (max-width: 600px) {
   .latest-news-button {
     gap: 10px;
     width: 30px;
