--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -86,7 +86,7 @@
   bottom: 25px;
   right: -16px;
 }
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .form-container {
     width: 1000px;
     height: 760px;
@@ -107,7 +107,7 @@
     margin-right: 125px;
   }
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .form-container {
     width: 800px;
     height: 760px;
@@ -122,7 +122,7 @@
     width: 273px;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .form-container {
         width: 742px;
         height: 760px;
@@ -138,7 +138,7 @@
       width: 273px;
     }
   }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .form-container {
     width: 375px;
     height: 1118px;
