--- a/src/components/ContactHeader.css
+++ b/src/components/ContactHeader.css
@@ -16,7 +16,7 @@
   bottom: 91px;
   left: 716px;
 }
-@media only screen and (max-width:1024px) {
+@media (max-width:1024px) {
     .location-top {
         top: 29px;
         right: 200px;
@@ -26,7 +26,7 @@
         left: 250px;
       }
 }
-@media only screen and (max-width:600px) {
+@media (max-width:600px) {
     .contact-header-bg {
         width: 100%;
         height: 300px;
