--- a/src/components/ContactformSection.css
+++ b/src/components/ContactformSection.css
@@ -107,7 +107,7 @@
   font-weight: 700;
   line-height: 28px;
 }
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
     .form-section-left {
         width: 100%;
         padding: 50px;
@@ -127,7 +127,7 @@
         padding: 50px 0px;
       }
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .form-section-left {
     width: 100%;
     padding: 50px;
@@ -137,7 +137,7 @@
     padding: 18px;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .contact-container {
     padding: 10px 0px;
   }
