--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,7 +8,6 @@
 }
 .footer-sections{
     display: flex;
-    /* align-items: center; */
     justify-content: space-between;
     flex-wrap: wrap;
 }
@@ -28,7 +27,7 @@
 }
 .find{
     display: flex;
-    width: 300px;
+    width: 250px;
     height: 50px;
     background-color: #22327e;
     border-radius: 30px;
@@ -38,9 +37,9 @@
     outline: none;
     background-color: #22327e;
     border-radius: 30px;
-    padding: 0 30px;
+    padding-left: 20px;
     font-size: 13px;
-    width: 245px;
+    width: 80%;
 }
 .find a{
     background-color: #e02727;
@@ -50,7 +49,7 @@
     align-items: center;
     justify-content: center;
     margin: 2px;
-    width: 50px;
+    width: 20%;
 }
 .content p{
     color: #fff;
@@ -93,15 +92,15 @@
     gap: 20px;
 }
 
-@media only screen and (max-width : 1024px){
+@media (max-width : 1024px){
     .footer-container{
-        padding: 50px;
+        padding: 30px;
     
     }
 }
-@media only screen and (max-width : 600px){
+@media (max-width : 600px){
     .footer-container{
-        padding: 50px;
+        padding: 10px;
     
     }
 }
