--- a/src/components/LatestNews.css
+++ b/src/components/LatestNews.css
@@ -31,9 +31,10 @@
   padding: 50px !important;
   content: none !important;
 }
-@media only screen and (max-width : 1024px){
+@media (max-width : 1024px){
     .latest-news-container{
         padding: 100px 50px;
+        width: 100%;
     }
     .latest-news-cards{
         margin-top: 55px;
@@ -42,20 +43,21 @@
         flex-wrap: wrap;
     }
 }
-@media only screen and (max-width : 820px){
+@media (max-width : 820px){
     .latest-news-container{
         padding: 20px 30px;
+        width: 100%;
     }
 }
-@media only screen and (max-width : 768px){
+@media (max-width : 768px){
     .latest-news-container{
         padding: 20px 50px;
     }
 }
-@media only screen and (max-width : 640px){
+@media (max-width : 640px){
     .latest-news-container{
-        padding: 20px 20px;
-        width: 375px;
+        padding: 20px;
+        width: 100%;
     }
     .latest-news-cards{
         margin-top: 20px;
