--- a/src/components/LatestNewsCard.css
+++ b/src/components/LatestNewsCard.css
@@ -1,7 +1,9 @@
 .latest-card-container {
   position: relative;
-  width: 278px;
-  height: 397px;
+  width: 100%;
+}
+.latest-card-container:hover{
+  width: 105%;
 }
 .card-tag {
   position: absolute;
@@ -33,16 +35,15 @@
 .latest-card-img img {
   width: 100%;
   height: 100%;
+  border-radius: 15px;
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .latest-card-container {
-    width: 340px;
-    height: 485px;
+    width: 100%;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .latest-card-container {
-    width: 333px;
-    height: 472px;
+    width: 100%;
   }
 }
