--- a/src/components/LiftingEquipments.css
+++ b/src/components/LiftingEquipments.css
@@ -36,7 +36,7 @@
     top: 50px;
 }
 
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
     .lifting-equipments-list {
       width: 100%;
       top: 170px;
@@ -52,7 +52,7 @@
       top: 50px;
     }
   }
-  @media only screen and (max-width: 820px) {
+  @media (max-width: 820px) {
     .lifting-equipments-list {
       width: 87%;
       top: 170px;
@@ -68,7 +68,7 @@
       top: 50px;
     }
   }
-  @media only screen and (max-width: 768px) {
+  @media (max-width: 768px) {
     .lifting-equipments-container {
       margin-top: 0px;
     }
@@ -87,7 +87,7 @@
       top: 50px;
     }
   }
-  @media only screen and (max-width: 600px) {
+  @media (max-width: 600px) {
     .lifting-equipments-list {
       width: 91%;
       top: 170px;
