--- a/src/components/MissionCard.css
+++ b/src/components/MissionCard.css
@@ -43,7 +43,7 @@
 .mission-content img {
   width: 110px;
 }
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .mission-container h1 {
     font-size: 125px;
   }
@@ -64,7 +64,7 @@
     width: 565px;
   }
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .mission-container {
     margin-top: 50px;
     gap: 34px;
@@ -90,7 +90,7 @@
     width: 465px;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .mission-container {
     margin-top: 50px;
     gap: 15px;
