--- a/src/components/MoreAboutButton.css
+++ b/src/components/MoreAboutButton.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 50px 200px;
-    max-width: 100%;
+    width: 100%;
 }
 .more-about-btn p{
     font-size: 16px;
@@ -11,7 +11,7 @@
     color: #000;
 }
 
-@media only screen and (max-width : 1024px){
+@media (max-width : 1024px){
     .more-about-btn{
         display: flex;
         align-items: flex-start;
@@ -27,39 +27,39 @@
         color: #000;
     }
 }
-@media only screen and (max-width : 820px){
+@media (max-width : 820px){
     .more-about-btn{
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
-        max-width: 100%;
+        width: 100%;
         padding: 20px 30px;
     }
 }
-@media only screen and (max-width : 768px){
+@media (max-width : 768px){
     .more-about-btn{
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
-        max-width: 100%;
-        padding: 20px 50px;
+        width: 100%;
+        padding: 20px;
     }
 }
-@media only screen and (max-width : 600px){
+@media (max-width : 600px){
     .more-about-btn{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
         margin: auto;
-        max-width: 100%;
-        padding: 20px 20px;
+        width: 100%;
+        padding: 20px;
     }
     .more-about-btn p{
         font-size: 16px;
         font-weight: 400;
         text-wrap: wrap;
-        width: 350px;
+        width: 100%;
         color: #000;
         margin-bottom: 20px;
     }
