--- a/src/components/MoreAboutusSection.css
+++ b/src/components/MoreAboutusSection.css
@@ -13,7 +13,7 @@
     justify-content: flex-start;
 }
 .more-about-content h3{
-    width: 1500px;
+    width: 79%;
     color: #253485;
     font-size: 37px;
     line-height: 42px;
@@ -24,7 +24,7 @@
 }
 .more-about-img{
     padding-bottom: 65px;
-    width: 1500px;
+    width: 79%;
 }
 .more-about-img img{
     width: 100%;
@@ -33,7 +33,7 @@
 .counter-section{
     background-color: white;
     height: 177px;
-    width: 510px;
+    width: 25%;
     position: absolute;
     left: 201px;
     bottom: -13px;
@@ -72,43 +72,24 @@
 .about-us-side-line img{
     height: 100%;
 }
-@media only screen and (max-width : 1024px){
+@media (max-width : 1024px){
     .more-about-content{
-        padding: 20px 100px;
+        padding: 50px;
     }
     .counter-section{
         height: 150px;
-        width: 435px;
+        width: 40%;
         left: 102px;
         bottom: -13px;
         gap: 50px;
     }
-    .counter h2{
-        font-weight: 700;
-        font-size: 45px;
-    }
-    .counter p{
-        font-size: 14px;
-        line-height: 45px;
-        font-weight: 600;
-    }
-    .experiens h2{
-        font-weight: 700;
-        font-size: 45px;
-    }
-    .experiens p{
-        font-size: 14px;
-        line-height: 45px;
-        font-weight: 600;
-    }
     .more-about-content h3{
-        width: 805px;
+        width: 87%;
         font-size: 30px;
         line-height: 40px;
         font-weight: 700;
         letter-spacing: -1px;
         padding-bottom: 33px;
-        
         text-wrap: wrap;
     }
     .more-about-img{
@@ -119,11 +100,10 @@
         display: none;
     }
 }
-@media only screen and (max-width : 820px){
+@media (max-width : 820px){
     .counter-section{
-        height: 150px;
-        width: 435px;
-        left: 35px;
+        width: 50%;
+        left: 50px;
         bottom: -13px;
         gap: 50px;
     }
@@ -146,7 +126,7 @@
         font-weight: 600;
     }
     .more-about-content h3{
-        width: 735px;
+        width: 100%;
         font-size: 30px;
         line-height: 40px;
         font-weight: 700;
@@ -156,13 +136,13 @@
     }
     .more-about-img{
         padding-bottom: 65px;
-        width: 735px;
+        width: 100%;
     }
     .about-us-side-line{
         display: none;
     }
 }
-@media only screen and (max-width : 768px){
+@media (max-width : 768px){
     .more-about-content{
         padding: 20px 20px;
         display: flex;
@@ -171,14 +151,8 @@
         justify-content: flex-start;
     }
     .counter-section{
-        height: 135px;
-        width: 400px;
-        position: absolute;
-        left: 58px;
-        bottom: -13px;
-        display: flex;
-        gap: 50px;
-        align-items: center;
+        width: 50%;
+        left: 20px;
     }
     .counter h2{
         font-weight: 700;
@@ -200,7 +174,7 @@
         font-weight: 600;
     }
     .more-about-content h3{
-        width: 650px;
+        width: 100%;
         font-size: 30px;
         line-height: 40px;
         font-weight: 700;
@@ -209,36 +183,35 @@
     }
     .more-about-img{
         padding-bottom: 65px;
-        width: 650px;
+        width: 100%;
     }
     .about-us-side-line{
         display: none;
     }
 }
-@media only screen and (max-width : 600px){
+@media (max-width : 600px){
     .more-about-content{
-        padding: 20px 20px;
+        padding: 20px;
     }
     .more-about-content h3{
-        padding: 20px 20px;
-        width: 375px;
-        font-size: 30px;
+        width: 100%;
+        font-size: 28px;
         line-height: 30px;
         font-weight: 700;
         letter-spacing: -1px;
         padding-bottom: 33px;
-        text-align: center;
+        text-align: left;
     }
     .more-about-img{
         padding-bottom: 65px;
-        width: 340px;
+        width: 100%;
     }
     .about-us-side-line{
         display: none;
     }
     .counter-section{
         height: 100px;
-        width: 265px;
+        width: 70%;
         left: 18px;
         bottom: -15px;
         gap: 40px;
