--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -14,8 +14,7 @@
     display: none;
 }
 .logo{
-    width: 136px;
-    height: 56px;
+    width: 10%;
 }
 .nav-items{
     display: flex;
@@ -93,7 +92,7 @@
     padding: 18px 40px;
 }
 
-@media only screen and (max-width: 1024px){
+@media (max-width: 1024px){
     .mob-nav-container{
         display: none;
     }
@@ -125,7 +124,7 @@
         font-size: 12px;
     }
 }
-@media only screen and (max-width: 820px){
+@media (max-width: 820px){
     .nav-container{
         padding: 15px 30px;
         gap: 3px;
@@ -158,7 +157,7 @@
         font-size: 10px;
     }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .mob-nav-container{
         display: none;
     }
@@ -194,7 +193,7 @@
         font-size: 10px;
     }
   }
-  @media only screen and (max-width: 600px){
+  @media (max-width: 600px){
     .nav-container{display: none;
     }
     .mob-nav-container{
@@ -274,8 +273,5 @@
         text-decoration: none;
         color: var(--black);
         cursor: pointer;
-    }
-    .mob-nav-items-content:hover, .set-active{
-        color: #e02727
     }
   }
