--- a/src/components/OurHistory.css
+++ b/src/components/OurHistory.css
@@ -67,7 +67,7 @@
     padding-left: 30px;
     height: 100%;
 }
-@media only screen and (max-width:1024px) {
+@media (max-width:1024px) {
     .our-history-container{
         margin-top: 50px;
     }
@@ -79,7 +79,7 @@
         gap: 135px;
     }
 }
-@media only screen and (max-width:600px) {
+@media (max-width:600px) {
     .our-history-container{
         margin-top: 30px;
         padding: 10px;
