--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -53,7 +53,7 @@
     color: #e7151a;
 }
 
-@media only screen and (max-width:1024px) {
+@media (max-width:1024px) {
     .page-header-container{
         width: 100%;
         height: 350px;
@@ -82,7 +82,7 @@
         margin-top: 25px;
     }
 }
-@media only screen and (max-width:820px) {
+@media (max-width:820px) {
     .page-header-container{
         width: 100%;
         height: 350px;
@@ -111,7 +111,7 @@
         margin-top: 25px;
     }
 }
-@media only screen and (max-width:768px) {
+@media (max-width:768px) {
     .page-header-container{
         width: 100%;
         height: 350px;
@@ -140,7 +140,7 @@
         margin-top: 25px;
     }
 }
-@media only screen and (max-width:600px) {
+@media (max-width:600px) {
     .page-header-container{
         width: 100%;
         height: 350px;
