--- a/src/components/PowerSystems.css
+++ b/src/components/PowerSystems.css
@@ -35,7 +35,7 @@
   right: 200px;
   top: 50px;
 }
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .power-systems-container {
     margin-top: 0px;
   }
@@ -54,7 +54,7 @@
     top: 50px;
   }
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .power-systems-container {
     margin-top: 0px;
   }
@@ -73,7 +73,7 @@
     top: 50px;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .power-systems-container {
     margin-top: 0px;
   }
@@ -92,7 +92,7 @@
     top: 50px;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .power-systems-container {
     margin-top: 0px;
   }
