--- a/src/components/ProductRange.css
+++ b/src/components/ProductRange.css
@@ -8,7 +8,7 @@
   background-color: #e7151a;
   padding-left: 200px;
   padding-top: 50px;
-  width: 722px;
+  width: 39%;
   height: 301px;
   margin-bottom: 100px;
 }
@@ -22,7 +22,6 @@
   color: #fff;
   font-size: 16px;
   font-weight: 200;
-  /* margin-top: 15px; */
   margin: 15px 0px;
 }
 .carousel {
@@ -51,15 +50,14 @@
   justify-content: center;
   gap: 15px;
 }
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .product-range-container{
     margin-top: 50px;
   }
   .product-range {
-    background-color: #e7151a;
     padding-left: 50px;
     padding-top: 54px;
-    width: 722px;
+    width: 50%;
     height: 301px;
     margin-bottom: 100px;
   }
@@ -84,11 +82,11 @@
     margin: 44px 0;
   }
 }
-@media only screen and (max-width: 820px) {
+@media (max-width: 820px) {
   .product-range {
     padding-left: 30px;
     padding-top: 30px;
-    width: 546px;
+    width: 50%;
     height: 275px;
     margin-bottom: 100px;
   }
@@ -113,11 +111,11 @@
     margin: 44px 0;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .product-range {
     padding-left: 50px;
     padding-top: 37px;
-    width: 522px;
+    width: 50%;
     height: 266px;
     margin-bottom: 100px;
   }
@@ -143,13 +141,13 @@
     margin: 44px 0;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .product-range-container{
     margin-top: 20px;
   }
   .product-range {
     padding: 20px;
-    width: 375px;
+    width: 100%;
     height: 266px;
     margin-bottom: 100px;
   }
@@ -181,5 +179,8 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 50px;
+  }
+  .product-range p {
+    margin: 0px;
   }
 }
