--- a/src/components/ProductsListing.css
+++ b/src/components/ProductsListing.css
@@ -38,7 +38,7 @@
     top: 50px;
 }
 
-@media only screen and (max-width:1024px){
+@media (max-width:1024px){
     .product-listing{
         padding: 50px;
     }
@@ -50,7 +50,7 @@
         top: 50px;
     }
 }
-@media only screen and (max-width:820px){
+@media (max-width:820px){
     .product-listing{
         padding: 50px;
     }
@@ -62,7 +62,7 @@
         top: 50px;
     }
 }
-@media only screen and (max-width:768px){
+@media (max-width:768px){
     .product-listing{
         padding: 50px;
     }
@@ -74,7 +74,7 @@
         top: 50px;
     }
 }
-@media only screen and (max-width:768px){
+@media (max-width:768px){
     .product-listing{
         padding: 50px;
     }
@@ -85,7 +85,7 @@
         top: 50px;
     }
 }
-@media only screen and (max-width:600px){
+@media (max-width:600px){
     .product-listing-container{
         margin-top: 30px; 
     }
