--- a/src/components/TopNavbar.css
+++ b/src/components/TopNavbar.css
@@ -50,17 +50,17 @@
     width: 30px;
     cursor: pointer;
 }
-@media only screen and (max-width: 1024px){
+@media (max-width: 1024px){
     .top-nav-container{
         padding: 15px 50px;
     }
 }
-@media only screen and (max-width: 820px){
+@media (max-width: 820px){
     .top-nav-container{
         padding: 15px 30px;
     }
 }
-@media only screen and (max-width: 768px){
+@media (max-width: 768px){
     .top-nav-container{
         background-color: #243584;
         display: flex;
@@ -70,7 +70,7 @@
         padding: 15px 50px;
     }
 }
-@media only screen and (max-width: 600px){
+@media (max-width: 600px){
     .top-nav-container{
         background-color: #243584;
         display: flex;
