--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -1,12 +1,12 @@
 .about-footer{
     margin-top: 88px;
 }
-@media only screen and (max-width:1024px) {
+@media (max-width:1024px) {
     .about-footer{
         margin-top: 50px;
     }
 }
-@media only screen and (max-width:600px) {
+@media (max-width:600px) {
     .about-footer{
         margin-top: 30px;
     }
