--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,14 +5,29 @@
     width: 80%;
     margin: auto;
 }
-@media only screen and (max-width: 1024px) {
+
+@media (max-width: 1024px) {
     .header-container{
         height: 500px;
-        /* max-width: 1900px; */
-        width: 80%;
-        margin-top: 30px;
+        width: 90%;
     }
 }
-@media only screen and (max-width: 600px){
-
+@media (max-width: 820px){
+    .header-container{
+        height: 500px;
+        width: 95%;
+    }
+}
+@media (max-width: 768px){
+    .header-container{
+        height: 500px;
+        width: 95%;
+    }
+}
+@media (max-width: 600px){
+    .header-container{
+        height: 500px;
+        width: 95%;
+        margin-top: 20px;
+    }
 }
