--- a/src/pages/ProductsForRent.css
+++ b/src/pages/ProductsForRent.css
@@ -11,7 +11,7 @@
 .productc-for-rent-footer{
     margin-top: 650px;
 }
-@media only screen and (max-width:1024px){
+@media (max-width:1024px){
     .power-systems-section{
         margin-top: 2120px;
     }
@@ -25,7 +25,7 @@
         margin-top: 910px;
     }
 }
-@media only screen and (max-width:820px){
+@media (max-width:820px){
     .power-systems-section{
         margin-top: 2120px;
     }
@@ -39,7 +39,7 @@
         margin-top: 885px;
     }
 }
-@media only screen and (max-width:760px){
+@media (max-width:760px){
     .power-systems-section{
         margin-top: 2120px;
     }
@@ -53,7 +53,7 @@
         margin-top: 875px;
     }
 }
-@media only screen and (max-width:600px){
+@media (max-width:600px){
     .power-systems-section{
         margin-top: 4240px;
     }
