--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,12 +1,12 @@
 .form-container {
   background-color: #181565;
-  width: 749px;
+  width: 100%;
   height: 804px;
   border-radius: 20px;
   padding: 73px;
 }
 .form-container h4 {
-  width: 561px;
+  width: 76%;
   color: #fff;
   font-size: 24px;
   line-height: 34px;
@@ -16,12 +16,11 @@
   display: flex;
   gap: 50px;
   justify-content: space-between;
-  /* flex-wrap: wrap; */
 }
 .form-details {
   display: flex;
   flex-direction: column;
-  width: 274px;
+  width: 40%;
 }
 .form-details label {
   color: #fff;
@@ -31,7 +30,7 @@
   background-color: #181565;
   border: 1px solid #a3a1c1;
   outline: none;
-  width: 274px;
+  width: 100%;
   height: 45px;
   margin-top: 15px;
   color: #a3a1c1;
@@ -76,7 +75,7 @@
 .submit-btn {
   background-color: #ff0000;
   color: #fff;
-  width: 130px;
+  width: 30%;
   height: 50px;
   padding: 20px 55px;
   position: relative;
@@ -88,23 +87,23 @@
 }
 @media (max-width: 1024px) {
   .form-container {
-    width: 1000px;
     height: 760px;
     border-radius: 20px;
     padding: 50px;
   }
   .form-container h4 {
     text-align: left;
-    width: 600px;
+    width: 60%;
+  }
+  .form-details {
+    width: 80%;
   }
   .form-details input {
-    width: 400px;
-    
+    width: 100%;
   }
   .form-content-section {
     display: flex;
     gap: 100px;
-    margin-right: 125px;
   }
 }
 @media (max-width: 820px) {
@@ -116,46 +115,56 @@
   }
   .form-container h4 {
     text-align: left;
-    width:600px;
+    width: 600px;
   }
   .form-details input {
-    width: 273px;
+    width: 100%;
   }
 }
 @media (max-width: 768px) {
-    .form-container {
-        width: 742px;
-        height: 760px;
-        border-radius: 20px;
-        padding: 50px;
-        margin: 20px;
-    }
-    .form-container h4 {
-      text-align: left;
-      width: 600px;
-    }
-    .form-details input {
-      width: 273px;
-    }
-  }
-@media (max-width: 600px) {
   .form-container {
-    width: 375px;
-    height: 1118px;
+    width: 100%;
+    height: 760px;
     border-radius: 20px;
     padding: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    margin: 20px;
+  }
+  .form-container h4 {
+    text-align: left;
+    width: 80%;
+  }
+  .form-details input {
+    width: 100%;
+  }
+}
+@media (max-width: 600px) {
+  .form-container {
+    width: 100%;
+    padding: 20px;
+    height: 962px;
+    border-radius: 20px;
   }
   .form-container h4 {
     text-align: center;
-    width: 300px;
+    width: 100%;
   }
   .form-content-section {
-   flex-wrap: wrap;
-    gap: 10px;
+    flex-wrap: wrap;
+    gap: 0px;
     margin-right: 0px;
+  }
+  .form-details{
+    width: 100%;
+  }
+  .form-details input {
+    width: 100%;
+  }
+  .form-container {
+    margin: 0px;
+  }
+  .submit-btn {
+    width: 30%;
+    height: 50px;
+    padding: 20px 55px;
   }
 }
