--- a/src/components/ContactHeader.css
+++ b/src/components/ContactHeader.css
@@ -16,33 +16,34 @@
   bottom: 91px;
   left: 716px;
 }
-@media (max-width:1024px) {
-    .location-top {
-        top: 29px;
-        right: 200px;
-      }
-      .location-bottom {
-        bottom: 91px;
-        left: 250px;
-      }
+@media (max-width: 1024px) {
+  .location-top {
+    top: 29px;
+    right: 200px;
+  }
+  .location-bottom {
+    bottom: 91px;
+    left: 250px;
+  }
 }
-@media (max-width:600px) {
-    .contact-header-bg {
-        width: 100%;
-        height: 300px;
-      }
-    .location-top {
-        top: 29px;
-        right: 100px;
-      }
-      .location-top img{
-        width: 40px;
-      }
-      .location-bottom {
-        bottom: 71px;
-        left: 150px;
-      }
-      .location-bottom img{
-        width: 40px;
-      }
+@media (max-width: 600px) {
+  .contact-header-bg {
+    width: 100%;
+    height: 300px;
+    margin-top: 50px;
+  }
+  .location-top {
+    top: 29px;
+    right: 100px;
+  }
+  .location-top img {
+    width: 40px;
+  }
+  .location-bottom {
+    bottom: 71px;
+    left: 150px;
+  }
+  .location-bottom img {
+    width: 40px;
+  }
 }
