--- a/src/components/ContactformSection.css
+++ b/src/components/ContactformSection.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 1500px;
+  width: 70%;
   margin: auto;
   padding: 100px 0px;
 }
@@ -27,13 +27,13 @@
   margin-top: 100px;
   display: flex;
   justify-content: space-between;
-  gap: 78px;
+  gap: 80px;
   flex-wrap: wrap;
 }
 .address-section {
   margin-top: 20px;
   background-color: #ff0000;
-  width: 376px;
+  width: 100%;
   color: #fff;
   font-size: 27px;
   font-weight: 700;
@@ -108,38 +108,56 @@
   line-height: 28px;
 }
 @media (max-width: 1024px) {
-    .form-section-left {
-        width: 100%;
-        padding: 50px;
-      }
-      .address-section {
-        width: 100%;
-        padding: 18px;
-      }
-      .form-section {
-        margin-top: 100px;
-        display: flex;
-        justify-content: space-between;
-        gap:50px;
-        flex-wrap: wrap;
-      }
-      .contact-container{
-        padding: 50px 0px;
-      }
-}
-@media (max-width: 820px) {
+  .contact-container {
+    padding: 10px;
+    width: 80%;
+  }
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    margin: auto;
+    padding: 100px 0px;
+  }
   .form-section-left {
     width: 100%;
-    padding: 50px;
+    padding: 20px;
   }
   .address-section {
     width: 100%;
     padding: 18px;
   }
+  .form-section {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    flex-wrap: wrap;
+  }
+  .contact-container {
+    padding: 50px 0px;
+  }
+  .ksa-office-address {
+    padding-bottom: 50px;
+  }
+}
+@media (max-width: 820px) {
+  .form-section-left {
+    width: 100%;
+    padding: 20px;
+  }
+  .address-section {
+    width: 100%;
+    padding: 10px;
+    margin-top: 0px;
+  }
 }
 @media (max-width: 600px) {
   .contact-container {
-    padding: 10px 0px;
+    padding: 0px;
+    width: 100%;
   }
   .form-section {
     margin-top: 10px;
@@ -147,6 +165,15 @@
   }
   .form-section-left {
     width: 100%;
-    padding: 50px;
+    padding: 20px;
+  }
+  .abu-office-address {
+    margin-bottom: 40px;
+  }
+  .ksa-office-address {
+    margin-top: 10px;
+  }
+  .head-section h1 {
+    line-height: 35px;
   }
 }
