--- a/src/components/AirSystems.css
+++ b/src/components/AirSystems.css
@@ -2,25 +2,25 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  position: relative;
+  width: 100%;
 }
-.air-systems {
-  background-color: #e7151a;
+.air-system {
+  background-color: var(--lavaRed);
   padding-left: 90px;
   padding-right: 90px;
   padding-top: 54px;
-  width: 700px;
+  width: 35%;
   height: 301px;
   margin-bottom: 100px;
 }
-.air-systems h4 {
+.air-system h4 {
   color: #fff;
-  font-size: 42px;
+  font-size: 38px;
   font-weight: 700;
   line-height: 50px;
 }
-.air-systems-list {
-  width: 90%;
+.air-system-list {
+  width: 100%;
   height: 250px;
   position: absolute;
   top: 170px;
@@ -29,88 +29,83 @@
   flex-wrap: wrap;
   gap: 26px;
 }
-.air-systems-button {
+.air-system-button {
   position: absolute;
   right: 200px;
   top: 50px;
 }
-@media (min-width: 1024px) {
-  .air-systems-list {
-    width: 87%;
-    top: 170px;
-    left: 135px;
+@media (max-width: 1024px) {
+  .air-system-list {
+    width: 100%;
+    top: 130px;
+    left: 30px;
   }
-  .air-systems {
-    padding: 50px;
-    width: 700px;
+  .air-system {
+    padding: 54px 30px;
+    width: 50%;
     height: 301px;
   }
-  .air-systems-button {
+  .air-system-button {
     right: 50px;
     top: 50px;
   }
 }
 @media (max-width: 820px) {
-  .air-systems-list {
-    width: 87%;
-    top: 170px;
-    left: 50px;
+  .air-system-list {
+    width: 100%;
+    top: 130px;
+    left: 30px;
   }
-  .air-systems {
-    padding: 50px;
-    width: 700px;
+  .air-system {
+    padding: 54px 30px;
+    width: 50%;
     height: 301px;
   }
-  .air-systems-button {
+  .air-system-button {
     right: 50px;
     top: 50px;
+  }
+  .air-system h4 {
+    font-size: 28px;
   }
 }
 @media (max-width: 768px) {
-  .air-systems-container {
-    margin-top: 0px;
-  }
-  .air-systems-list {
-    width: 91%;
-    top: 170px;
+  .air-system-list {
+    width: 100%;
+    top: 130px;
     left: 30px;
   }
-  .air-systems {
-    padding: 50px;
-    width: 700px;
-    height: 301px;
-  }
-  .air-systems-button {
-    right: 50px;
-    top: 50px;
+  .air-system {
+    padding: 54px 30px;
+    width: 55%;
+    height: 200px;
   }
 }
 @media (max-width: 600px) {
-  .air-systems-list {
-    width: 91%;
-    top: 170px;
-    left: 20px;
-    margin-top: 50px;
+  .air-system-container {
+    margin-top: 30px;
   }
-  .air-systems {
-    padding: 50px;
-    width: 379px;
-    height: 301px;
+  .air-system {
+    padding: 20px;
   }
-  .air-systems-button {
-    right: 50px;
-    top: 50px;
+  .air-system-list {
+    width: 100%;
+    top: 190px;
+    left: 5%;
   }
-  .air-systems {
-    width: 379px;
-    height: 301px;
-    padding: 50px;
-  }
-  .air-systems-button {
+  .air-system-button {
     right: 60px;
-    top: 132px;
+    top: 120px;
   }
-  .air-systems h4 {
+  .air-system {
+    width: 100%;
+    height: 301px;
+    padding: 50px;
+  }
+  .air-system h4 {
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 50px;
     text-align: center;
   }
 }
