--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -98,9 +98,18 @@
     
     }
 }
-@media (max-width : 600px){
-    .footer-container{
-        padding: 10px;
-    
+@media only screen and (max-width: 600px) {
+    .footer-container {
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-content: center;
+      padding: 1em;
+      grid-row-gap: 100px;
     }
-}
+    .footer-sections{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+  }
