--- a/src/components/LatestNewsCard.css
+++ b/src/components/LatestNewsCard.css
@@ -47,3 +47,14 @@
     width: 100%;
   }
 }
+
+@media (max-width: 600px) {
+  .latest-card-container {
+    width: 100%;
+  }
+  .latest-card-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+  }
+}
