--- a/src/components/LiftingEquipments.css
+++ b/src/components/LiftingEquipments.css
@@ -1,118 +1,112 @@
-.lifting-equipments-container{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    position: relative;
+.lifting-equipments-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  position: relative;
+  width: 100%;
 }
-.lifting-equipments{
-    background-color: #22337f;
-    padding-left: 90px;
-    padding-right: 90px;
-    padding-top: 54px;
-    width: 700px;
+.lifting-equipments {
+  background-color: #243584;
+  padding-left: 90px;
+  padding-right: 90px;
+  padding-top: 54px;
+  width: 35%;
+  height: 301px;
+  margin-bottom: 100px;
+}
+.lifting-equipments h4 {
+  color: #fff;
+  font-size: 38px;
+  font-weight: 700;
+  line-height: 50px;
+}
+.lifting-equipments-list {
+  width: 100%;
+  height: 250px;
+  position: absolute;
+  top: 170px;
+  left: 90px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 26px;
+}
+.lifting-equipments-button {
+  position: absolute;
+  right: 200px;
+  top: 50px;
+}
+@media (max-width: 1024px) {
+  .lifting-equipments-list {
+    width: 100%;
+    top: 130px;
+    left: 30px;
+  }
+  .lifting-equipments {
+    padding: 54px 30px;
+    width: 50%;
     height: 301px;
-    margin-bottom: 100px;
-    
+  }
+  .lifting-equipments-button {
+    right: 50px;
+    top: 50px;
+  }
 }
-.lifting-equipments h4{
-    color: #fff;
-    font-size: 42px;
+@media (max-width: 820px) {
+  .lifting-equipments-list {
+    width: 100%;
+    top: 130px;
+    left: 30px;
+  }
+  .lifting-equipments {
+    padding: 54px 30px;
+    width: 50%;
+    height: 301px;
+  }
+  .lifting-equipments-button {
+    right: 50px;
+    top: 50px;
+  }
+  .lifting-equipments h4 {
+    font-size: 28px;
+  }
+}
+@media (max-width: 768px) {
+  .lifting-equipments-list {
+    width: 100%;
+    top: 130px;
+    left: 30px;
+  }
+  .lifting-equipments {
+    padding: 54px 30px;
+    width: 55%;
+    height: 200px;
+  }
+}
+@media (max-width: 600px) {
+  .lifting-equipments-container {
+    margin-top: 30px;
+  }
+  .lifting-equipments {
+    padding: 20px;
+  }
+  .lifting-equipments-list {
+    width: 100%;
+    top: 232px;
+    left: 5%;
+  }
+  .lifting-equipments-button {
+    right: 60px;
+    top: 163px;
+  }
+  .lifting-equipments {
+    width: 100%;
+    height: 301px;
+    padding: 50px;
+  }
+  .lifting-equipments h4 {
+    font-size: 38px;
     font-weight: 700;
     line-height: 50px;
+    text-align: center;
+  }
 }
-.lifting-equipments-list{
-    width: 100%;
-    height: 250px;
-    position: absolute;
-    top: 170px;
-    left: 90px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 26px;
-}
-.lifting-equipments-button{
-    position: absolute;
-    right: 200px;
-    top: 50px;
-}
-
-@media (max-width: 1024px) {
-    .lifting-equipments-list {
-      width: 100%;
-      top: 170px;
-      left: 135px;
-    }
-    .lifting-equipments {
-      padding: 50px;
-      width: 700px;
-      height: 301px;
-    }
-    .lifting-equipments-button {
-      right: 50px;
-      top: 50px;
-    }
-  }
-  @media (max-width: 820px) {
-    .lifting-equipments-list {
-      width: 87%;
-      top: 170px;
-      left: 50px;
-    }
-    .lifting-equipments {
-      padding: 50px;
-      width: 700px;
-      height: 301px;
-    }
-    .lifting-equipments-button {
-      right: 50px;
-      top: 50px;
-    }
-  }
-  @media (max-width: 768px) {
-    .lifting-equipments-container {
-      margin-top: 0px;
-    }
-    .lifting-equipments-list {
-      width: 91%;
-      top: 170px;
-      left: 30px;
-    }
-    .lifting-equipments {
-      padding: 50px;
-      width: 700px;
-      height: 301px;
-    }
-    .lifting-equipments-button {
-      right: 50px;
-      top: 50px;
-    }
-  }
-  @media (max-width: 600px) {
-    .lifting-equipments-list {
-      width: 91%;
-      top: 170px;
-      left: 20px;
-      margin-top: 70px;
-    }
-    .lifting-equipments {
-      padding: 50px;
-      width: 379px;
-      height: 301px;
-    }
-    .lifting-equipments-button {
-      right: 50px;
-      top: 50px;
-    }
-    .lifting-equipments {
-      width: 379px;
-      height: 301px;
-      padding: 50px;
-    }
-    .lifting-equipments-button {
-      right: 60px;
-      top: 170px;
-    }
-    .lifting-equipments h4 {
-      text-align: center;
-    }
-  }
