--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -1,173 +1,187 @@
-.page-header-container{
-    background-image: url("../assets/images/jpg/products_for_rent_bg.jpg");
-    background-repeat: no-repeat; 
-    width: 100%;
-    background-size: cover;
-    height: 433px;
-    padding: 100px 160px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.page-header-container {
+  background-image: url("../assets/images/jpg/products_for_rent_bg.jpg");
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  height: 433px;
+  padding-top: 100px;
+  padding-right: 100px;
+  padding-bottom: 100px;
+  padding-left: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.bg-img{
+.bg-img {
+  display: block;
+  margin-top: 140px;
+  width: 60%;
+}
+.bg-img img {
+  display: block;
+  width: 100%;
+}
+.page-head-section {
+  width: 25%;
+}
+.page-head-section h1 {
+  font-weight: 700;
+  font-size: 77px;
+  color: #243584;
+  line-height: 85px;
+}
+.home-path {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-top: 35px;
+}
+.home-path a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #243584;
+}
+.home-path img {
+  height: 8px;
+}
+.home-path p {
+  font-size: 14px;
+  font-weight: 500;
+  color: #e7151a;
+}
+
+@media (max-width: 1024px) {
+  .page-header-container {
+    width: 100%;
+    height: 350px;
+    padding: 50px 50px;
+  }
+  .bg-img {
     display: block;
     margin-top: 140px;
-}
-.bg-img img{
+  }
+  .bg-img {
+    display: block;
+    margin-top: 140px;
+    width: 65%;
+  }
+  .bg-img img {
     display: block;
     width: 100%;
-    height: 435px;
-}
-.page-head-section{
-    width: 328px;
-    
-}
-.page-head-section h1{
+    height: 300px;
+  }
+  .page-head-section h1 {
     font-weight: 700;
-    font-size: 77px;
+    font-size: 60px;
     color: #243584;
-    line-height: 85px;
-}
-.home-path{
+    line-height: 70px;
+  }
+  .home-path {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 10px;
-    margin-top: 35px;
+    margin-top: 25px;
+  }
 }
-.home-path a{
+@media (max-width: 820px) {
+  .page-header-container {
+    width: 100%;
+    height: 350px;
+    padding: 50px 50px;
+  }
+  .bg-img {
+    display: block;
+    margin-top: 140px;
+    width: 65%;
+  }
+  .bg-img img {
+    display: block;
+    width: 100%;
+    height: 300px;
+  }
+  .page-head-section {
+    width: 35%;
+  }
+  .page-head-section h1 {
+    font-weight: 700;
+    font-size: 60px;
+    color: #243584;
+    line-height: 70px;
+  }
+  .home-path {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    margin-top: 25px;
+  }
+}
+@media (max-width: 768px) {
+  .page-header-container {
+    width: 100%;
+    height: 350px;
+    padding: 50px 50px;
+  }
+  .page-head-section {
+    width: 35%;
+  }
+  .p .bg-img {
+    display: block;
+    margin-top: 140px;
+  }
+  .bg-img img {
+    display: block;
+    width: 100%;
+    height: 300px;
+  }
+  .page-head-section h1 {
+    font-weight: 700;
+    font-size: 50px;
+    color: #243584;
+    line-height: 50px;
+  }
+  .home-path {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    margin-top: 25px;
+  }
+}
+@media (max-width: 600px) {
+  .page-header-container {
+    width: 100%;
+    height: 350px;
+    padding: 30px 30px;
+    text-align: center;
+  }
+  .page-head-section {
+    width: 100%;
+  }
+  .page-head-section h1 {
+    font-weight: 700;
+    font-size: 60px;
+    color: #243584;
+    line-height: 70px;
+    text-align: center;
+  }
+  .bg-img {
+    display: none;
+  }
+  .bg-img img {
+    display: none;
+  }
+  .home-path {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
-    font-size: 14px;
-    font-weight: 500;
-    color: #243584;
-}
-.home-path img{
-    height: 8px;
-}
-.home-path p{
-    font-size: 14px;
-    font-weight: 500;
-    color: #e7151a;
-}
-
-@media (max-width:1024px) {
-    .page-header-container{
-        width: 100%;
-        height: 350px;
-        padding: 50px 50px;
-    }
-    .bg-img{
-        display: block;
-        margin-top: 140px;
-    }
-    .bg-img img{
-        display: block;
-        width: 100%;
-        height: 300px;
-    }
-    .page-head-section h1{
-        font-weight: 700;
-        font-size: 60px;
-        color: #243584;
-        line-height: 70px;
-    }
-    .home-path{
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 10px;
-        margin-top: 25px;
-    }
-}
-@media (max-width:820px) {
-    .page-header-container{
-        width: 100%;
-        height: 350px;
-        padding: 50px 50px;
-    }
-    .bg-img{
-        display: block;
-        margin-top: 140px;
-    }
-    .bg-img img{
-        display: block;
-        width: 100%;
-        height: 300px;
-    }
-    .page-head-section h1{
-        font-weight: 700;
-        font-size: 60px;
-        color: #243584;
-        line-height: 70px;
-    }
-    .home-path{
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 10px;
-        margin-top: 25px;
-    }
-}
-@media (max-width:768px) {
-    .page-header-container{
-        width: 100%;
-        height: 350px;
-        padding: 50px 50px;
-    }
-    .bg-img{
-        display: block;
-        margin-top: 140px;
-    }
-    .bg-img img{
-        display: block;
-        width: 100%;
-        height: 300px;
-    }
-    .page-head-section h1{
-        font-weight: 700;
-        font-size: 60px;
-        color: #243584;
-        line-height: 70px;
-    }
-    .home-path{
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 10px;
-        margin-top: 25px;
-    }
-}
-@media (max-width:600px) {
-    .page-header-container{
-        width: 100%;
-        height: 350px;
-        padding: 30px 30px;
-        text-align: center;
-    }
-   
-    .page-head-section h1{
-        font-weight: 700;
-        font-size: 60px;
-        color: #243584;
-        line-height: 70px;
-        text-align: center;
-    }
-    .bg-img{
-        display: none;
-       
-    }
-    .bg-img img{
-        display: none;
-        
-    }
-    .home-path{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        margin-top: 25px;
-    }
+    gap: 10px;
+    margin-top: 25px;
+  }
 }
