--- a/src/components/ProductsListCard.css
+++ b/src/components/ProductsListCard.css
@@ -1,8 +1,7 @@
 .card-container{
     background-color: #ffff;
     border-radius: 10px;
-    width: 335px;
-    height: 335px;
+    width: 17%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
     position: relative;
 }
@@ -14,7 +13,7 @@
 }
 .card-img{
     margin-top: 8px;
-    width: 320px;
+    width: 95%;
     height: 246px;
     background-color: #eceeee;
     border-radius: 10px;
@@ -23,6 +22,7 @@
     justify-content: center;
     padding-left: 45px;
     padding-right: 45px;
+    object-fit: cover;
 }
 .card-img img{
     width: 100%;
@@ -39,10 +39,28 @@
     color: #22337f ;
     text-align: left;
 }
-
-
 .card-next-button{
     position: absolute;
     top: 16px;
     right: 18px;
+}
+@media (max-width:1024px){
+    .card-container{
+        width: 30%;
+    }
+}
+@media (max-width:820px){
+    .card-container{
+        width: 45%;
+    }
+}
+@media (max-width:768px){
+    .card-container{
+        width: 45%;
+    }
+}
+@media (max-width:600px){
+    .card-container{
+        width: 90%;
+    }
 }
