--- a/src/components/ProductsListing.css
+++ b/src/components/ProductsListing.css
@@ -1,13 +1,14 @@
 .product-listing-container{
     position: relative;
     margin-top: 94px; 
+    width: 100%;
 }
 .product-listing{
     background-color: #e7151a;
     padding-left: 90px;
     padding-right: 90px;
     padding-top: 54px;
-    width: 700px;
+    width: 35%;
     height: 301px;
     display: flex;
     justify-content: space-between;
@@ -40,10 +41,16 @@
 
 @media (max-width:1024px){
     .product-listing{
-        padding: 50px;
+        padding: 54px 30px;
+        width: 50%;
+        height: 250px;
+    }
+    .product-listing h4{
+        font-size: 35px;
     }
     .products-list{
-        left: 130px;
+        top: 130px;
+        left: 30px;
     }
     .products-button{
         right: 50px;
@@ -52,19 +59,12 @@
 }
 @media (max-width:820px){
     .product-listing{
-        padding: 50px;
+        padding: 54px 30px;
+        width: 50%;
+        height: 250px;
     }
-    .products-list{
-        left: 63px;
-    }
-    .products-button{
-        right: 50px;
-        top: 50px;
-    }
-}
-@media (max-width:768px){
-    .product-listing{
-        padding: 50px;
+    .product-listing h4{
+        font-size: 27px;
     }
     .products-list{
         left: 30px;
@@ -75,13 +75,23 @@
     }
 }
 @media (max-width:768px){
+    .product-listing-container{
+        margin-top: 40px; 
+    }
     .product-listing{
-        padding: 50px;
+        padding: 40px 30px;
+        width: 55%;
+        height: 200px;
+    }
+    .product-listing h4{
+        font-size: 28px;
     }
     .products-list{
         left: 30px;
+        top: 110px;
     }
     .products-button{
+        right: 50px;
         top: 50px;
     }
 }
@@ -93,20 +103,19 @@
         padding: 20px;
     }
     .products-list{
-        margin-top: 80px;
-        left: 20px;
+        top: 250px;
+        left: 5%;
     }
     .products-button{
         right: 60px;
         top: 173px;
     }
     .product-listing{
-        width: 379px;
+        width: 100%;
         height: 301px;
         padding: 50px;
     }
-    .product-listing h4{
-        color: #fff;
+    .product-listing h4{      
         font-size: 38px;
         font-weight: 700;
         line-height: 50px;
