--- a/src/pages/ProductsForRent.css
+++ b/src/pages/ProductsForRent.css
@@ -1,47 +1,47 @@
 
 .power-systems-section{
-    margin-top: 1100px;
+    margin-top: 55%;
 }
 .air-systems-section{
-    margin-top: 200px;
+    margin-top: 11%;
 }
 .lifting-equipments-section{
-    margin-top: 200px;
+    margin-top: 11%;
 }
 .productc-for-rent-footer{
-    margin-top: 650px;
+    margin-top: 30%;
 }
 @media (max-width:1024px){
     .power-systems-section{
-        margin-top: 2120px;
+        margin-top: 135%;
     }
     .air-systems-section{
-        margin-top: 200px;
+        margin-top: 11%;
     }
     .lifting-equipments-section{
-        margin-top: 580px;
+        margin-top: 16%;
     }
     .productc-for-rent-footer{
-        margin-top: 910px;
+        margin-top: 48%;
     }
 }
 @media (max-width:820px){
     .power-systems-section{
-        margin-top: 2120px;
+        margin-top: 260%;
     }
     .air-systems-section{
-        margin-top: 200px;
+        margin-top: 13%;
     }
     .lifting-equipments-section{
-        margin-top: 580px;
+        margin-top: 60%;
     }
     .productc-for-rent-footer{
-        margin-top: 885px;
+        margin-top: 105%;
     }
 }
-@media (max-width:760px){
+@media (max-width:768px){
     .power-systems-section{
-        margin-top: 2120px;
+        margin-top: 275%;
     }
     .air-systems-section{
         margin-top: 200px;
@@ -50,12 +50,12 @@
         margin-top: 580px;
     }
     .productc-for-rent-footer{
-        margin-top: 875px;
+        margin-top: 125%;
     }
 }
 @media (max-width:600px){
     .power-systems-section{
-        margin-top: 4240px;
+        margin-top: 1160%;
     }
     .air-systems-section{
         margin-top: 550px;
@@ -64,6 +64,6 @@
         margin-top: 910px;
     }
     .productc-for-rent-footer{
-        margin-top: 2020px;
+        margin-top: 545%;
     }
 }
