--- a/src/components/AboutPageHeader.css
+++ b/src/components/AboutPageHeader.css
@@ -1,4 +1,4 @@
-.page-header-container {
+.about-header-container {
   background-image: url("../assets/images/jpg/products_for_rent_bg.jpg");
   background-repeat: no-repeat;
   width: 100%;
@@ -12,19 +12,19 @@
   align-items: center;
   justify-content: space-between;
 }
-.bg-img {
+.about-bg-img {
   display: block;
-  margin-top: 160px;
+  margin-top: 65px;
   width: 60%;
 }
-.bg-img img {
+.about-bg-img img {
   display: block;
   width: 100%;
 }
-.page-head-section {
+.about-head-section {
   width: 25%;
 }
-.page-head-section h1 {
+.about-head-section h1 {
   font-weight: 700;
   font-size: 77px;
   color: #243584;
@@ -56,26 +56,22 @@
 }
 
 @media (max-width: 1024px) {
-  .page-header-container {
+  .about-header-container {
     width: 100%;
     height: 350px;
     padding: 50px 50px;
   }
-  .bg-img {
-    display: block;
-    margin-top: 140px;
-  }
-  .bg-img {
+  .about-bg-img {
     display: block;
     margin-top: 140px;
     width: 65%;
   }
-  .bg-img img {
+  .about-bg-img img {
     display: block;
     width: 100%;
     height: 300px;
   }
-  .page-head-section h1 {
+  .about-head-section h1 {
     font-weight: 700;
     font-size: 60px;
     color: #243584;
@@ -90,25 +86,25 @@
   }
 }
 @media (max-width: 820px) {
-  .page-header-container {
+  .about-header-container {
     width: 100%;
     height: 350px;
     padding: 50px 50px;
   }
-  .bg-img {
+  .about-bg-img {
     display: block;
     margin-top: 140px;
     width: 65%;
   }
-  .bg-img img {
+  .about-bg-img img {
     display: block;
     width: 100%;
     height: 300px;
   }
-  .page-head-section {
+  .about-head-section {
     width: 35%;
   }
-  .page-head-section h1 {
+  .about-head-section h1 {
     font-weight: 700;
     font-size: 60px;
     color: #243584;
@@ -123,24 +119,24 @@
   }
 }
 @media (max-width: 768px) {
-  .page-header-container {
+  .about-header-container {
     width: 100%;
     height: 350px;
     padding: 50px 50px;
   }
-  .page-head-section {
+  .about-head-section {
     width: 35%;
   }
-  .p .bg-img {
+  .about-bg-img {
     display: block;
     margin-top: 140px;
   }
-  .bg-img img {
+  .about-bg-img img {
     display: block;
     width: 100%;
     height: 300px;
   }
-  .page-head-section h1 {
+  .about-head-section h1 {
     font-weight: 700;
     font-size: 50px;
     color: #243584;
@@ -155,26 +151,26 @@
   }
 }
 @media (max-width: 600px) {
-  .page-header-container {
+  .about-header-container {
     width: 100%;
     height: 350px;
     padding: 30px 30px;
     text-align: center;
   }
-  .page-head-section {
+  .about-head-section {
     width: 100%;
   }
-  .page-head-section h1 {
+  .about-head-section h1 {
     font-weight: 700;
     font-size: 60px;
     color: #243584;
     line-height: 70px;
     text-align: center;
   }
-  .bg-img {
+  .about-bg-img {
     display: none;
   }
-  .bg-img img {
+  .about-bg-img img {
     display: none;
   }
   .home-path {
