--- a/src/components/MissionCard.css
+++ b/src/components/MissionCard.css
@@ -4,6 +4,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   gap: 44px;
+  width: 100%;
 }
 .mission-container h1 {
   color: #fef4f4;
@@ -14,7 +15,7 @@
 }
 .mission-content {
   background-color: #f0f1f6;
-  width: 290px;
+  width: 20%;
   height: 355px;
   border-radius: 30px;
   padding-top: 90px;
@@ -25,7 +26,7 @@
   position: absolute;
   left: 209px;
   bottom: 50px;
-  width: 618px;
+  width: 200%;
 }
 .mission-text h2 {
   color: #243584;
@@ -37,23 +38,26 @@
 .mission-text p {
   color: #000;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 24px;
 }
 .mission-content img {
-  width: 110px;
+  width: 46%;
 }
 @media (max-width: 1024px) {
+  .mission-container {
+    margin-top: 30px;
+  }
   .mission-container h1 {
     font-size: 125px;
   }
   .mission-content {
-    width: 270px;
+    width: 27%;
     padding-top: 70px;
     padding-left: 45px;
   }
   .mission-content img {
-    width: 90px;
+    width: 43%;
   }
   .mission-text h2 {
     padding-bottom: 20px;
@@ -66,20 +70,19 @@
 }
 @media (max-width: 820px) {
   .mission-container {
-    margin-top: 50px;
-    gap: 34px;
+    margin-top: 30px;
   }
   .mission-container h1 {
     font-size: 125px;
   }
   .mission-content {
-    width: 160px;
+    width: 28%;
     height: 300px;
-    padding-top: 50px;
+    padding-top: 27px;
     padding-left: 35px;
   }
   .mission-content img {
-    width: 90px;
+    width: 44%;
   }
   .mission-text h2 {
     padding-bottom: 10px;
@@ -87,35 +90,40 @@
   .mission-text {
     left: 109px;
     bottom: 30px;
-    width: 465px;
+    width: 200%;
   }
+  
 }
 @media (max-width: 600px) {
   .mission-container {
-    margin-top: 50px;
+    margin-top: 20px;
     gap: 15px;
   }
   .mission-container h1 {
     font-size: 50px;
   }
   .mission-content {
-    width: 160px;
-    height: 300px;
-    padding-top: 50px;
+    width: 70%;
+    height: 225px;
+    padding-top: 40px;
     padding-left: 35px;
   }
   .mission-content img {
-    width: 50px;
+    width: 40%;
   }
   .mission-text h2 {
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     font-size: 26px;
     font-weight: 700;
-    line-height: 45px;
+    line-height: 25px;
   }
   .mission-text {
     left: 85px;
-    bottom: 30px;
-    width: 270px;
+    bottom: 25px;
+    width: 170%;
+  }
+  .mission-text p {
+    font-size: 13px;
+    line-height: 20px;
   }
 }
