--- a/src/components/Capabilities.css
+++ b/src/components/Capabilities.css
@@ -40,12 +40,10 @@
   align-items: center;
   justify-content: flex-start;
   gap: 28px;
-}
-.capabilities-right-content p {
   color: #fff;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 400
 }
 @media (max-width: 1024px) {
   .capabilities-container {
