--- a/src/components/ContactHeader.css
+++ b/src/components/ContactHeader.css
@@ -8,42 +8,42 @@
 }
 .location-top {
   position: absolute;
-  top: 29px;
-  right: 526px;
+  top: 5%;
+  right: 28%;
 }
 .location-bottom {
   position: absolute;
-  bottom: 91px;
-  left: 716px;
+  bottom: 18%;
+  left: 38%;
 }
 @media (max-width: 1024px) {
   .location-top {
-    top: 29px;
-    right: 200px;
+    top: 6%;
+    right: 29%;
   }
   .location-bottom {
-    bottom: 91px;
-    left: 250px;
+    bottom: 19%;
+    left: 28%;
   }
 }
 @media (max-width: 600px) {
   .contact-header-bg {
     width: 100%;
-    height: 300px;
+    height: 250px;
     margin-top: 50px;
   }
   .location-top {
-    top: 29px;
-    right: 100px;
+    top: 10%;
+    right: 25%;
   }
   .location-top img {
-    width: 40px;
+    width: 35px;
   }
   .location-bottom {
-    bottom: 71px;
-    left: 150px;
+    bottom: 20%;
+    left: 30%;
   }
   .location-bottom img {
-    width: 40px;
+    width: 35px;
   }
 }
